--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"dependencies": {
 		"apify": "^2.0.6",
 		"cheerio": "^1.0.0-rc.9",
-		"moment": "^2.29.1"
+		"moment": "^2.29.1",
+		"puppeteer": "^13.7.0"
 	},
 	"devDependencies": {
 		"@apify/eslint-config": "^0.1.3",
