--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"apify": "^2.0.6",
 		"cheerio": "^1.0.0-rc.9",
 		"moment": "^2.29.1",
+		"playwright": "^1.46.1",
 		"puppeteer": "^13.7.0"
 	},
 	"devDependencies": {
