--- a/package.json
+++ b/package.json
@@ -3,21 +3,20 @@
 	"version": "0.1.2",
 	"description": "Kickstarter scraper",
 	"dependencies": {
-		"apify": "^2.0.6",
-		"cheerio": "^1.0.0-rc.9",
-		"moment": "^2.29.1",
-		"playwright": "*",
-		"puppeteer": "^13.7.0"
+        "apify": "^3.1.10",
+        "crawlee": "^3.5.4",
+        "playwright": "*"
 	},
 	"devDependencies": {
-		"@apify/eslint-config": "^0.1.3",
-		"eslint": "^7.0.0"
+        "@apify/eslint-config": "^0.4.0",
+        "eslint": "^8.50.0"
 	},
 	"scripts": {
-		"start": "node main.js",
-		"lint": "./node_modules/.bin/eslint ./src --ext .js,.jsx",
-		"lint:fix": "./node_modules/.bin/eslint ./src --ext .js,.jsx --fix",
-		"test": "echo \"Error: oops, the actor has no tests yet, sad!\" && exit 1"
+        "start": "node main.js",
+        "lint": "eslint ./src --ext .js,.jsx",
+        "lint:fix": "eslint ./src --ext .js,.jsx --fix",
+        "test": "echo \"Error: oops, the actor has no tests yet, sad!\" && exit 1",
+        "postinstall": "npx crawlee install-playwright-browsers"
 	},
 	"author": "It's not you it's me",
 	"license": "ISC"
