--- a/package.json
+++ b/package.json
@@ -3,20 +3,21 @@
 	"version": "0.1.2",
 	"description": "Kickstarter scraper",
 	"dependencies": {
-        "apify": "^3.1.10",
-        "crawlee": "^3.5.4",
-        "playwright": "*"
+		"apify": "^3.1.10",
+		"crawlee": "^3.5.4",
+		"moment": "^2.30.1",
+		"playwright": "*"
 	},
 	"devDependencies": {
-        "@apify/eslint-config": "^0.4.0",
-        "eslint": "^8.50.0"
+		"@apify/eslint-config": "^0.4.0",
+		"eslint": "^8.50.0"
 	},
 	"scripts": {
-        "start": "node main.js",
-        "lint": "eslint ./src --ext .js,.jsx",
-        "lint:fix": "eslint ./src --ext .js,.jsx --fix",
-        "test": "echo \"Error: oops, the actor has no tests yet, sad!\" && exit 1",
-        "postinstall": "npx crawlee install-playwright-browsers"
+		"start": "node main.js",
+		"lint": "eslint ./src --ext .js,.jsx",
+		"lint:fix": "eslint ./src --ext .js,.jsx --fix",
+		"test": "echo \"Error: oops, the actor has no tests yet, sad!\" && exit 1",
+		"postinstall": "npx crawlee install-playwright-browsers"
 	},
 	"author": "It's not you it's me",
 	"license": "ISC"
