--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"lint": "eslint ./src --ext .js,.jsx",
 		"lint:fix": "eslint ./src --ext .js,.jsx --fix",
 		"test": "echo \"Error: oops, the actor has no tests yet, sad!\" && exit 1",
-		"postinstall": "npx crawlee install-playwright-browsers && npx playwright install --with-deps"
+		"postinstall": "npx crawlee install-playwright-browsers"
 	},
 	"author": "It's not you it's me",
 	"license": "ISC"
