--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "kickstarter-search",
 	"version": "0.1.2",
 	"description": "Kickstarter scraper",
+	"type": "module",
 	"dependencies": {
 		"apify": "^3.1.10",
 		"crawlee": "^3.5.4",
@@ -13,7 +14,7 @@
 		"eslint": "^8.50.0"
 	},
 	"scripts": {
-		"start": "node main.js",
+        "start": "node src/main.js",
 		"lint": "eslint ./src --ext .js,.jsx",
 		"lint:fix": "eslint ./src --ext .js,.jsx --fix",
 		"test": "echo \"Error: oops, the actor has no tests yet, sad!\" && exit 1",
